dark mode is fixed

--- a/mopaint/static/styles.css
+++ b/mopaint/static/styles.css
@@ -969,6 +969,11 @@ select {
   font-weight: 500;
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
